# bournemouth-forced-aligner

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  output_timestamps.TextGrid  pyproject.toml  requirements.txt  setup.py
bournemouth_aligner/: __init__.py  cli.py  core.py  forced_alignment.py  mapper66.py  presets.py  universal_phonemeizer.py  utils.py
bournemouth_aligner/cpp_onix/: bfaonnx.py  compile_binary_x64_linux  compiled_binary_x64_linux  main  main.cpp  main_b.cpp
bournemouth_aligner/cpp_onnx/: export_cupe_to_onnx.py  main.cpp
bournemouth_aligner/cupe2i/: model2i.py
bournemouth_aligner/helpers/: mel_spec.py
bournemouth_aligner/ipamappers/: espeak_languages.md  ph66_mapper copy.py  ph66_phonemeizer copy.py  ph66_phonemeizer.py
examples/: basic_usage.py  batch_aligment.py  create_mfa_textgrid.py  example_advanced.py  example_full.py  mel_spectrum_alignment.py  read_embeddings.py  run_simplipied_pipeline.py  textgrid_export.py  whisper_example.py
examples/samples/LJSpeech/: LJ001-0001.TextGrid  LJ001-0001.srt.json  LJ001-0001.vs.json  LJ001-0002.TextGrid  LJ001-0002.srt.json  LJ001-0002.vs.json  batch_output.vs.json
examples/samples/audio/: 109867__timkahn__butterfly.vs.json
examples/samples/outputs/: butterfly.TextGrid  butterfly_advanced.TextGrid
examples/samples/outputs/109867__timkahn__butterfly/mfa_textgrids/: 109867__timkahn__butterfly.TextGrid  alignment_analysis.csv
examples/samples/outputs/LJ001-0002.wav/mfa_textgrids/: LJ001-0002.TextGrid  alignment_analysis.csv
tests/: __init__.py  test_cli.py  test_core.py
