# pyproject.toml - Fixed Version with Proper Escaping
[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bournemouth-forced-aligner"
version = "0.1.0"
description = "Bournemouth Forced Aligner - Phoneme-level timestamp extraction"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "gplv3"}
authors = [
    {name = "Tabahi", email = "tabahi@duck.com"}
]
maintainers = [
    {name = "Tabahi", email = "tabahi@duck.com"}
]
keywords = [
    "phoneme", 
    "alignment", 
    "speech", 
    "audio", 
    "timestamp", 
    "forced-alignment", 
    "bournemouth",
    "CUPE",
    "speech-recognition",
    "linguistics"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "torch>=1.9.0",
    "torchaudio>=0.9.0",
    "huggingface_hub>=0.8.0",
    "numpy>=1.19.0",
    "click>=8.0.0",
    "phonemizer>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "pre-commit>=2.17.0",
]
test = [
    "pytest>=6.0",
    "pytest-cov>=3.0.0",
    "pytest-xdist>=2.5.0",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.17.0",
]
audio = [
    "librosa>=0.8.0",
    "soundfile>=0.10.0",
    "pydub>=0.25.0",
]
all = [
    "bournemouth-forced-aligner[dev,test,docs,audio]"
]

[project.urls]
Homepage = "https://github.com/tabahi/bournemouth-forced-aligner"
Documentation = "https://github.com/tabahi/bournemouth-forced-aligner#readme"
Repository = "https://github.com/tabahi/bournemouth-forced-aligner"
"Bug Tracker" = "https://github.com/tabahi/bournemouth-forced-aligner/issues"
Changelog = "https://github.com/tabahi/bournemouth-forced-aligner/blob/main/CHANGELOG.md"
"CUPE Models" = "https://huggingface.co/Tabahi/CUPE-2i"

[project.scripts]
balign = "bournemouth_aligner.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bournemouth_aligner*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
"bournemouth_aligner" = ["py.typed", "*.txt", "*.md"]

# Development tools configuration
[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["bournemouth_aligner"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]